<resources>
    <string name="app_name">RHBUS</string>
    <string name="app_version">RHBUS WAREHOUSE APP | V1.0.0.13</string>
    <string name="app_version_no">1.0.0.13</string>
    <string name="currency">INR. :</string>
    <string name="generatedText">Generated By RHBUS Solutions</string>
    <string name="contact">Srinidhi :+91-9620568973</string>
    <string name="thankNote">THANK YOU, VISIT AGAIN.</string>

    <string name="hitPhp">http://139.59.22.238/webservices/android/index.php</string>
    <string name="hitPhpPathCommon">/webservices/android/sync.php</string>
    <string name="hitPhpPathImage">/webservices/android/get_image.php</string>
    <string name="hitPhpPathSyncBack">/webservices/android/sync-back.php</string>
    <string name="httpRequest">https://rhbussupport.com</string>
    <string name="appConfig">androidso.ini</string>
    <string name="appIp">139.59.22.238</string>

    <string name="hitPhpPathCommon1">https://rhbussupport.com/rhbusphp/Amfphp/index.php</string>
    <string name="hitPhpPathImage1">http://139.59.22.238/webservices/android/get_image.php</string>
    <string name="hitPhpPathCompany1">http://139.59.22.238/webservices/android/get_image2.php</string>
    <string name="hitPhpPathSyncBack1">http://139.59.22.238/webservices/android/sync-back.php</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="take_barcode_picture">Take Barcode Picture</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="default_message">Message here</string>

    <string name="multiplied_expanding">Multiplied expanding</string>
    <string name="always_expanded">Always expanded</string>

    <string name="action_refresh">Help</string>
    <string name="action_sync">Sync</string>
    <string name="images">images</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_amount">Product Amount</string>
    <string name="subtotal_amount">Sub Total Amount</string>
    <string-array name="search_items">
        <item>Process Code</item>
    </string-array>
    <string-array name="search_status">
        <item>PASS</item>
        <item>REWORK</item>
        <item>REJECT</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_exception">Exception</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log in</string>
    <string name="prompt_customerkey">Customer Key</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_out">Log out</string>
    <string name="prompt_login_success">Welcome</string>
    <string name="error_invalid_email">email is empty</string>
    <string name="error_invalid_password">password is empty</string>

    <string name="icon_download">&#xf1fe;</string>
    <string name="icon_facebook">&#xf09a;</string>

    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <string name="refresh">Refresh</string>

    <string name="action_settings">Settings</string>
    <string name="pref_discoverable">Notification Alert</string>
    <string name="pref_notify_messages">Bluetooth Always ON</string>
    <string name="pref_notify_invites">Bluetooth Paired Device</string>
    <string name="pref_blue_disc">Bluetooth Disconnect on each Weight</string>

    <string name="titleGRCard">Goods Receipt</string>
    <string name="titlePickCard">Pick Card</string>
    <string name="titleMovemets">Movements</string>
    <string name="titleTransfer">Transfer</string>
    <string name="titleSettings">Settings</string>
    <string name="titleSendFeedback">Send Feedback</string>
    <string name="titleLogout">Logout</string>

    <string name="titlePendingInvites">Pending Invites</string>
</resources>
