<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Basic Settings">
        <SwitchPreference
            android:key="pref_notification"
            android:summary="Tap to Notification On"
            android:title="@string/pref_discoverable"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_bluetoothon"
            android:summary="Tap to Bluetooth On/Off"
            android:title="@string/pref_notify_messages"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="pref_notification_invites"
            android:title="@string/pref_notify_invites"
            android:defaultValue="true"
            android:checked="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Advanced Settings">

        <CheckBoxPreference
            android:key="pref_bluetooth_disconnect"
            android:title="Bluetooth Enable"
            android:summary="@string/pref_blue_disc"
            android:defaultValue="false"/>

        <EditTextPreference
            android:dialogTitle="Enter the Server"
            android:key="text"
            android:summary="Edit your Server Host"
            android:title="Server Host"
            android:inputType="text"
            android:defaultValue="@string/httpRequest"/>

    </PreferenceCategory>

    <Preference android:title="Check for Update" android:key="myKey"></Preference>

    <Preference
            android:key="versionPrefs"
            android:icon="@drawable/alerttxtreport"
            android:summary="@string/app_version" />

</PreferenceScreen>