<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_centerVertical="false"
            android:orientation="vertical">

            <EditText
                android:id="@+id/customerkey"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/prompt_customerkey"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/prompt_email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/_5sdp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <net.igenius.customcheckbox.CustomCheckBox
                    android:id="@+id/scb"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_margin="@dimen/_12sdp"
                    app:color_checked="@color/level_5"
                    app:color_tick="@color/colorWhite"
                    app:color_unchecked="@color/grey"
                    app:color_unchecked_stroke="@color/level_1"
                    app:duration="600"
                    app:small_tick="false"
                    app:stroke_width="@dimen/_1sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left|center"
                    android:text="Remember the Credentials"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </LinearLayout>


            <Button
                android:id="@+id/login2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/_5sdp"
                android:background="#2196F3"
                android:text="Log In"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>